--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                         <li><li>
                         <li><li>
                         <li><li>
-                        <li><a href="">心理咨询</a></li>
-                        <li><a href="">讨论专区</a></li>
+                        <li><a href="page/consult.html">心理咨询</a></li>
+                        <li><a href="page/message.html">讨论专区</a></li>
                     </ul>
                 </nav>
             </div>
